fix: Add word wrap to avoid text overflow (#180)

--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -141,3 +141,8 @@
         }
     }
 }
+.wrap-text {
+    display:block;
+    max-width:130px;
+    word-wrap:break-word;
+}
